objects/Semaforo_Proxy_Portale__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Semaforo_DOM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Semaforo DOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Semaforo_Proxy_Portale_Attivazione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Semaforo Proxy Portale Attivazione</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Semaforo_Proxy_Portale_Cessazione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Semaforo Proxy Portale Cessazione</label>
        <type>Checkbox</type>
    </fields>
    <label>Semaforo Proxy Portale</label>
</CustomObject>